--- a/secondary.html
+++ b/secondary.html
@@ -16,7 +16,7 @@
             <div class="nav-brand">DGBV South Asia</div>
             <div class="nav-links">
             
-            <a href="gbvwebsite2.html">Main Article</a>
+            <a href="index.html">Main Article</a>
             <a href="#donation">Donate to us</a>
             </div>
         </div>
@@ -53,6 +53,11 @@
                     </p>
                 </div>
             </section>
+
+            <div class="quote-container">
+                <p class="quote-text">“They (women) must protest in their own spaces against any kind of aggression and violence.”</p>
+                <p class="quote-author">— Shireen Huq</p>
+            </div>
         </div>
 
         <br>
@@ -102,6 +107,10 @@
                     </p>
                 </div>
             </section>
+            <div class="quote-container">
+                <p class="quote-text">"The more women see other women in public spaces, the more safe, independent and empowered each of us will be,"</p>
+                <p class="quote-author">— Shrishti Bakshi</p>
+            </div>
         </div>
 
         <br>
@@ -112,7 +121,6 @@
                 <div class="country-flag"></div>
             </div>
             <section class="person-section fade-in">
-                <div class="person-title">Pakistan</div>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Qandeel_Baloch_%283x4_cropped%29.jpg" alt="Qandeel Baloch" class="person-image">
                 <div class="person-content">
                     <h2 class="person-title">Qandeel Baloch</h2>
@@ -136,6 +144,12 @@
                     </p>
                 </div>
             </section>
+
+             <div class="quote-container">
+                <p class="quote-text">"We are constantly encouraged to think that being born a woman means we were born with limited choices and compromised dreams"</p>
+                <p class="quote-author">— Sharmeen Obaid-Chinoy</p>
+            </div>
+
             <section id="donation" style="display:flex; justify-content: center; align-items: center;">
                 
                 <img src="https://i.postimg.cc/NjPQxZrb/qr-code.png" alt="DonationQR" style="height: 50%; width: 50%;" />
