--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </p>
 
         <p>
-          This inherently hostile online environment shapes how South Asian women navigate digital spaces.Many adopt strategies like self-censorship 
+          This inherently hostile online environment shapes how South Asian women navigate digital spaces. Many adopt strategies like self-censorship 
           or choose to express themselves through private or anonymous accounts. While this masking can serve as a means of self-protection, it also 
           reflects a broader cultural discomfort with women’s privacy and autonomy. In South Asian communities, autonomy — whether online or offline — 
           is often met with harsh consequences, including institutional and interpersonal surveillance. Parents may demand unrestricted access to their 
@@ -995,14 +995,16 @@
         <img src="https://i.postimg.cc/yNS3h1tV/image.png" alt="Aroush" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin: 0 auto; display: block;">
         <p style="text-align: center;">Aroush<br><em>Research-Assistant</em></p>
       </div>
-    </div>
 
+      </div>
         <h3 style="color: #7a1e1e; margin-bottom: 1rem;">Our Mission</h3>
         <p style="max-width: 700px; margin: 0 auto;">
-          We created this paper to explore how women in South Asia face digital gender-based violence and what factors contribute to it. We also wanted to highlight the real experiences of women affected, and show how activists and policies are working to make online spaces safer. Overall, our goal is to raise awareness and spark conversations about empowering women in the digital world. Donate below to improve the lives of orphaned girls in underdeveloped areas!
+          We created this paper to explore how women in South Asia face digital gender-based violence and what factors contribute to it. We also wanted to highlight the real experiences of women affected, and show how activists and policies are working to make online spaces safer. Overall, our goal is to raise awareness and spark conversations about empowering women in the digital world.
         </p>
         <br>
         <section id="donation">
+          <h2>Donate below</h2>
+          <p>As part of our work on gender-based violence against women in South Asian countries, we want to shed light on young girls living in no name orphanages in dire conditions facing struggles everyday due to lack of resources. Education is a luxury to them, and their futures nonexistent as things stand right now. Your donation, no matter the amount, is greatly appreciated as it can make a difference in the lives and future of many less fortunate girls. 100% of the donations from the GoFundMe link below will go to an orphanage in Nampally, Hyderabad in India to specifically provide books, teachers and to ensure they don’t fall victim to rampant social phenomenons in poverty ridden communities such as child marriage and religious abuse. Please consider donating to support the orphans so they can have a fair shot at a bright future!</p>
           <img src="https://i.postimg.cc/NjPQxZrb/qr-code.png" alt="DonationQR" style="height: 50%; width: 50%;" />
         </section>
         
